Added Swagger generated api client.
