# src/server/controllers/site.js
@@ -1,0 +1,10 @@
+/* eslint-disable import/prefer-default-export */
+export default {
+  siteGet: (req, res) => {
+    if (req.swagger.useStubs) {
+      res.json({
+        siteTitle: 'Awesome site',
+      });
+    }
+  },
+};
